--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,18 @@
+asgiref==3.2.10
+certifi==2020.6.20
+chardet==3.0.4
 dj-database-url==0.5.0
-Django==2.2.3
-django-crispy-forms==1.7.2
+Django==3.0.8
+django-crispy-forms==1.9.2
 django-heroku==0.3.1
-gunicorn==19.9.0
-Pillow==6.1.0
-psycopg2==2.8.3
-pytz==2019.1
-sqlparse==0.3.0
-whitenoise==4.1.2
+django-recaptcha3==0.2.0
+gunicorn==20.0.4
+idna==2.10
+pkg-resources==0.0.0
+psycopg2==2.8.5
+python-decouple==3.3
+pytz==2020.1
+requests==2.24.0
+sqlparse==0.3.1
+urllib3==1.25.10
+whitenoise==5.1.0
